--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>rest countries api by khalid</title>
+    <title>test4</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
